--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,5 +4,7 @@ runmode = dev
 copyrequestbody = true 
 TemplateLeft = "<<<"
 TemplateRight = ">>>"
-
+EnableAdmin = true
+AdminAddr = "localhost"
+AdminPort = 8088
 
