--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,7 +4,4 @@ runmode = dev
 copyrequestbody = true 
 TemplateLeft = "<<<"
 TemplateRight = ">>>"
-EnableAdmin = true
-AdminAddr = "localhost"
-AdminPort = 8088
-
+EnableDocs = true,
